--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.0",
+    "dayjs": "^1.8.14",
     "express": "^4.17.1",
     "pug": "^2.0.4",
     "request": "^2.88.0"
