--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "tsc": "tsc",
     "start:dev": "NODE_ENV=development webpack",
     "run:dev": "NODE_ENV=development nodemon build/index.js"
   },
@@ -21,6 +22,7 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "dayjs": "^1.8.14",
+    "eventemitter3": "^3.1.2",
     "express": "^4.17.1",
     "pug": "^2.0.4",
     "request": "^2.88.0"
