moved files for better structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "node_modules"
   ],
   "files": [
-    "./node_modules/@types/node/index.d.ts"
+    "node_modules/@types/node/index.d.ts"
   ],
   "include": [
     "src/**/*.ts"
