--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "tsc": "tsc",
+    "build": "node_modules/.bin/webpack",
+    "tsc": "node_modules/.bin/tsc",
     "start:dev": "NODE_ENV=development webpack",
     "run:dev": "NODE_ENV=development nodemon build/index.js"
   },
