--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
 services:
   app:
+    hostname: aarehack1
+    container_name: aarehack1
     image: node:alpine
     volumes:
       - ./:/app
